added test cases

--- a/assignment_notebook.ipynb
+++ b/assignment_notebook.ipynb
@@ -253,6 +253,52 @@
         "## Test cases\n",
         "\n",
         "### Negation\n",
+        "\n",
+        "*Test 1:*\n",
+        "\n",
+        "```txt\n",
+        "USR: Joseph is not happy\n",
+        "PLX: I will remember that joseph is not happy\n",
+        "USR: Spill the beans\n",
+        "PLX: Every human is mortal. peter is human. joseph is human. joseph is not happy\n",
+        "USR: explain why joseph is not happy\n",
+        "PLX: joseph is not happy; therefore joseph is not happy\n",
+        "```\n",
+        "\n",
+        "*Test 2:*\n",
+        "\n",
+        "```txt\n",
+        "USR: Every teacher is happy\n",
+        "PLX: I will remember every teacher is happy\n",
+        "USR: Joseph is not happy\n",
+        "PLX: I will remember that joseph is not happy\n",
+        "USR: explain why joseph is not a teacher\n",
+        "PLX: joseph is not happy' every teacher is happy; therefore joseph is not a teacher\n",
+        "USR: spill the beans\n",
+        "PLX: every human is mortal. peter is human. joseph is human. every teacher is happy.\n",
+        "```\n",
+        "\n",
+        "### EQ\n",
+        "```txt\n",
+        "% Note: in this case prolexa.pl has: stored_rule(1,[(human(sk):-true),(happy(sk))]):-true)]).\n",
+        "USR: are some humans happy\n",
+        "PLX: some humans are happy\n",
+        "USR: explain why some humans are happy\n",
+        "PLX: some humans are happy; therefore some humans are happy\n",
+        "```\n",
+        "\n",
+        "```txt\n",
+        "USR: are some humans happy\n",
+        "PLX: sorry, I don't think this is the case \n",
+        "USR: some humans are happy\n",
+        "PLX: I will remember that some humans are happy\n",
+        "USR: spill the beans\n",
+        "PLX: every human is mortal. peter is human. joseph is human. some humans are happy. some humans are happy. some humans are happy.\n",
+        "USR: are some humans happy\n",
+        "PLX: some humans are happy\n",
+        "USR: explain why some humans are happy\n",
+        "PLX: some humans are happy; therefore some humans are happy\n",
+        "```\n",
         "\n"
       ]
     }
