Added Assignment Notebook

--- a/assignment_notebook.ipynb
+++ b/assignment_notebook.ipynb
@@ -7,7 +7,12 @@
       },
       "source": [
         "## Prolexa Extended - Computational Logic coursework 2024\n",
-        "This notebook allows for the extended version of Prolexa, developed for the 2024 Computational Logic coursework. It takes heavy influence from the demo_notebook found in this repository, from the original Computational Logic repo"
+        "This notebook allows for the extended version of Prolexa, developed for the 2024 Computational Logic coursework. It takes heavy influence from the demo_notebook found in this repository, from the original Computational Logic repo\n",
+        "\n",
+        "The structure is as follows: \n",
+        "- Installing and instantiate prolexa\n",
+        "- Running test cases found in report\n",
+        "- Interactive shell"
       ]
     },
     {
@@ -23,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -36,7 +41,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Extracting templates from packages: 100%\n"
+            "E: Could not open lock file /var/lib/dpkg/lock-frontend - open (13: Permission denied)\n",
+            "E: Unable to acquire the dpkg frontend lock (/var/lib/dpkg/lock-frontend), are you root?\n"
           ]
         }
       ],
@@ -57,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -70,11 +76,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "\u001b[31m  ERROR: Failed building wheel for prolexa\u001b[0m\n",
-            "\u001b[33m  DEPRECATION: prolexa was installed using the legacy 'setup.py install' method, because a wheel could not be built for it. A possible replacement is to fix the wheel build issue reported above. You can find discussion regarding this at https://github.com/pypa/pip/issues/8368.\u001b[0m\n",
-            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "google-colab 1.0.0 requires requests~=2.23.0, but you have requests 2.26.0 which is incompatible.\n",
-            "datascience 0.10.6 requires folium==0.2.1, but you have folium 0.8.3 which is incompatible.\u001b[0m\n"
+            "yes: standard output: Broken pipe\n"
           ]
         }
       ],
@@ -93,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -106,12 +108,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2021-10-06 08:50:29,323 --------------------------------------------------------------------------------\n",
-            "2021-10-06 08:50:29,324 The model key 'pos' now maps to 'https://huggingface.co/flair/pos-english' on the HuggingFace ModelHub\n",
-            "2021-10-06 08:50:29,332  - The most current version of the model is automatically downloaded from there.\n",
-            "2021-10-06 08:50:29,334  - (you can alternatively manually download the original model at https://nlp.informatik.hu-berlin.de/resources/models/pos/en-pos-ontonotes-v0.5.pt)\n",
-            "2021-10-06 08:50:29,336 --------------------------------------------------------------------------------\n",
-            "2021-10-06 08:50:29,406 loading file /root/.flair/models/pos-english/a9a73f6cd878edce8a0fa518db76f441f1cc49c2525b2b4557af278ec2f0659e.121306ea62993d04cd1978398b68396931a39eb47754c8a06a87f325ea70ac63\n"
+            "2024-05-12 10:55:10,585 SequenceTagger predicts: Dictionary with 53 tags: <unk>, O, UH, ,, VBD, PRP, VB, PRP$, NN, RB, ., DT, JJ, VBP, VBG, IN, CD, NNS, NNP, WRB, VBZ, WDT, CC, TO, MD, VBN, WP, :, RP, EX, JJR, FW, XX, HYPH, POS, RBR, JJS, PDT, NNPS, RBS, AFX, WP$, -LRB-, -RRB-, ``, '', LS, $, SYM, ADD\n"
           ]
         }
       ],
@@ -131,12 +128,14 @@
       },
       "source": [
         "### Input Method 1\n",
-        " Built using Google Colab's Input Attributes and is better for one-off parameters"
+        " Built using Google Colab's Input Attributes. Here the test cases from report will be printed in full\n",
+        "\n",
+        "#### Negation"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -149,17 +148,104 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Hello! I'm ProlexaPlus! Tell me anything, ask me anything.\n",
-            "tell me about Peter\n",
-            "peter is human. peter is mortal. peter is a professor. peter is a teacher\n"
+            "Joseph is not happy\n",
+            "I will remember that Joseph is not happy\n",
+            "spill the beans\n",
+            "every human is mortal. peter is human. joseph is human. some humans are happy. joseph is not happy\n",
+            "explain why joseph is not happy\n",
+            "joseph is not happy; therefore joseph is not happy\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "*** utterance(Joseph is not happy)\n",
+            "*** rule([(not(happy(joseph)):-true)])\n",
+            "*** answer(I will remember that Joseph is not happy)\n",
+            "*** answer(I heard you say,  Joseph is not happy , could you rephrase that please?)\n",
+            "*** utterance(spill the beans)\n",
+            "*** goal(all_rules(_30994))\n",
+            "*** answer(every human is mortal. peter is human. joseph is human. some humans are happy. joseph is not happy)\n",
+            "*** utterance(explain why joseph is not happy)\n",
+            "*** goal(explain_question(not(happy(joseph)),_40072,_39814))\n",
+            "*** answer(joseph is not happy; therefore joseph is not happy)\n"
           ]
         }
       ],
       "source": [
         "#@title Prolexa Interact\n",
-        "intro = 'Hello! I\\'m ProlexaPlus! Tell me anything, ask me anything.'\n",
-        "print(intro)\n",
-        "input = 'tell me about Peter'  #@param {type:\"string\"}\n",
+        "input = 'Joseph is not happy'  #@param {type:\"string\"}\n",
+        "print(input)\n",
+        "first_answer = meta.standardised_query(pl, input)[0]['Output']\n",
+        "print(first_answer)\n",
+        "input = 'spill the beans'  #@param {type:\"string\"}\n",
+        "print(input)\n",
+        "first_answer = meta.standardised_query(pl, input)[0]['Output']\n",
+        "print(first_answer)\n",
+        "input = 'explain why joseph is not happy'  #@param {type:\"string\"}\n",
+        "print(input)\n",
+        "first_answer = meta.standardised_query(pl, input)[0]['Output']\n",
+        "print(first_answer)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "every teacher is happy\n",
+            "I will remember that every teacher is happy\n",
+            "joseph is not happy\n",
+            "I already knew that joseph is not happy\n",
+            "explain why joseph is not a teacher\n",
+            "joseph is not happy; every teacher is happy; therefore joseph is not a teacher\n",
+            "spill the beans\n",
+            "every human is mortal. peter is human. joseph is human. some humans are happy. joseph is not happy. every teacher is happy\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "*** utterance(every teacher is happy)\n",
+            "*** rule([(happy(_48820):-teacher(_48820))])\n",
+            "*** answer(I will remember that every teacher is happy)\n",
+            "*** rule([(happy(_48844):-teacher(_48844))])\n",
+            "*** answer(I already knew that every teacher is happy)\n",
+            "*** answer(I heard you say,  every teacher is happy , could you rephrase that please?)\n",
+            "*** utterance(joseph is not happy)\n",
+            "*** rule([(not(happy(joseph)):-true)])\n",
+            "*** answer(I already knew that joseph is not happy)\n",
+            "*** answer(I heard you say,  joseph is not happy , could you rephrase that please?)\n",
+            "*** utterance(explain why joseph is not a teacher)\n",
+            "*** goal(explain_question(not(teacher(joseph)),_4196,_3904))\n",
+            "*** answer(joseph is not happy; every teacher is happy; therefore joseph is not a teacher)\n",
+            "*** utterance(spill the beans)\n",
+            "*** goal(all_rules(_12706))\n",
+            "*** answer(every human is mortal. peter is human. joseph is human. some humans are happy. joseph is not happy. every teacher is happy)\n"
+          ]
+        }
+      ],
+      "source": [
+        "#@title Prolexa Interact\n",
+        "input = 'every teacher is happy'  #@param {type:\"string\"}\n",
+        "print(input)\n",
+        "first_answer = meta.standardised_query(pl, input)[0]['Output']\n",
+        "print(first_answer)\n",
+        "input = 'joseph is not happy'  #@param {type:\"string\"}\n",
+        "print(input)\n",
+        "first_answer = meta.standardised_query(pl, input)[0]['Output']\n",
+        "print(first_answer)\n",
+        "input = 'explain why joseph is not a teacher'  #@param {type:\"string\"}\n",
+        "print(input)\n",
+        "first_answer = meta.standardised_query(pl, input)[0]['Output']\n",
+        "print(first_answer)\n",
+        "input = 'spill the beans'  #@param {type:\"string\"}\n",
         "print(input)\n",
         "first_answer = meta.standardised_query(pl, input)[0]['Output']\n",
         "print(first_answer)"
@@ -167,17 +253,104 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "rpuQmGY7GoFo"
-      },
+      "metadata": {},
       "source": [
-        "### Input Method 2\n",
-        " This method of input is built using a MVP iPywidget and is better for user interaction"
+        "#### Existential Quantification"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "are some humans happy\n",
+            "b'some humans are happy'\n",
+            "some humans are happy\n",
+            "I will remember that some humans are happy\n",
+            "are some humans happy\n",
+            "b'some humans are happy'\n",
+            "explain why some humans happy\n",
+            "I heard you say,  explain why some humans happy , could you rephrase that please?\n",
+            "spill the beans\n",
+            "every human is mortal. peter is human. joseph is human. some humans are happy. joseph is not happy. every teacher is happy. some humans are happy. some humans are happy. some humans are happy\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "*** utterance(are some humans happy)\n",
+            "*** query((human(sk),happy(sk)))\n",
+            "*** answer(some humans are happy)\n",
+            "*** utterance(some humans are happy)\n",
+            "*** rule([([human(sk),happy(sk)]:-true)])\n",
+            "*** answer(I will remember that some humans are happy)\n",
+            "*** rule([([human(sk),happy(sk)]:-true)])\n",
+            "*** answer(I already knew that some humans are happy)\n",
+            "*** rule([(human(sk):-true),(happy(sk):-true)])\n",
+            "*** answer(I will remember that some humans are happy)\n",
+            "*** rule([(human(sk):-true),(happy(sk):-true)])\n",
+            "*** answer(I will remember that some humans are happy)\n",
+            "*** answer(I heard you say,  some humans are happy , could you rephrase that please?)\n",
+            "*** utterance(are some humans happy)\n",
+            "*** query((human(sk),happy(sk)))\n",
+            "*** answer(some humans are happy)\n",
+            "*** utterance(explain why some humans happy)\n",
+            "*** answer(I heard you say,  explain why some humans happy , could you rephrase that please?)\n",
+            "*** utterance(spill the beans)\n",
+            "*** goal(all_rules(_56766))\n",
+            "*** answer(every human is mortal. peter is human. joseph is human. some humans are happy. joseph is not happy. every teacher is happy. some humans are happy. some humans are happy. some humans are happy)\n"
+          ]
+        }
+      ],
+      "source": [
+        "#@title Prolexa Interact\n",
+        "input = 'are some humans happy'  #@param {type:\"string\"}\n",
+        "print(input)\n",
+        "first_answer = meta.standardised_query(pl, input)[0]['Output']\n",
+        "print(first_answer)\n",
+        "input = 'some humans are happy'  #@param {type:\"string\"}\n",
+        "print(input)\n",
+        "first_answer = meta.standardised_query(pl, input)[0]['Output']\n",
+        "print(first_answer)\n",
+        "input = 'are some humans happy'  #@param {type:\"string\"}\n",
+        "print(input)\n",
+        "first_answer = meta.standardised_query(pl, input)[0]['Output']\n",
+        "print(first_answer)\n",
+        "input = 'explain why some humans are happy'  #@param {type:\"string\"}\n",
+        "print(input)\n",
+        "first_answer = meta.standardised_query(pl, input)[0]['Output']\n",
+        "print(first_answer)\n",
+        "input = 'spill the beans'  #@param {type:\"string\"}\n",
+        "print(input)\n",
+        "first_answer = meta.standardised_query(pl, input)[0]['Output']\n",
+        "print(first_answer)"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rpuQmGY7GoFo"
+      },
+      "source": [
+        "### Interactive Shell\n",
+        " This method of input is built using a MVP iPywidget and can be used as an interactive shell"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -202,7 +375,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "8811264ce4e74e13830181ed911d0aad",
+              "model_id": "b972992c4963469fa4e97baf3ba3ce2e",
               "version_major": 2,
               "version_minor": 0
             },
@@ -210,8 +383,21 @@
               "VBox(children=(Textarea(value='tell me about Peter', description='Question:', layout=Layout(height='50px', wid…"
             ]
           },
+          "execution_count": 5,
           "metadata": {},
-          "output_type": "display_data"
+          "output_type": "execute_result"
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "*** utterance(tell me about Peter)\n",
+            "*** goal(all_answers(peter,_4560))\n",
+            "*** answer(peter is human. peter is mortal. peter is human)\n",
+            "*** utterance(tell me about Joseph)\n",
+            "*** goal(all_answers(joseph,_13372))\n",
+            "*** answer(joseph is human. joseph is mortal. joseph is human)\n"
+          ]
         }
       ],
       "source": [
@@ -314,7 +500,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8.19"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
