--- a/assignment_notebook.ipynb
+++ b/assignment_notebook.ipynb
@@ -336,7 +336,50 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "#@title Prolexa Interact\n",
+        "input = 'spill the beans'  #@param {type:\"string\"}\n",
+        "print(input)\n",
+        "first_answer = meta.standardised_query(pl, input)[0]['Output']\n",
+        "print(first_answer)\n",
+        "input = 'do some humans fly'  #@param {type:\"string\"}\n",
+        "print(input)\n",
+        "first_answer = meta.standardised_query(pl, input)[0]['Output']\n",
+        "print(first_answer)\n",
+        "input = 'explain why some humans fly'  #@param {type:\"string\"}\n",
+        "print(input)\n",
+        "first_answer = meta.standardised_query(pl, input)[0]['Output']\n",
+        "print(first_answer)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#@title Prolexa Interact\n",
+        "input = 'every genius wins'  #@param {type:\"string\"}\n",
+        "print(input)\n",
+        "first_answer = meta.standardised_query(pl, input)[0]['Output']\n",
+        "print(first_answer)\n",
+        "input = 'some humans are geniuses'  #@param {type:\"string\"}\n",
+        "print(input)\n",
+        "first_answer = meta.standardised_query(pl, input)[0]['Output']\n",
+        "print(first_answer)\n",
+        "input = 'do some humans win'  #@param {type:\"string\"}\n",
+        "print(input)\n",
+        "first_answer = meta.standardised_query(pl, input)[0]['Output']\n",
+        "print(first_answer)\n",
+        "input = 'explain why some humans win'  #@param {type:\"string\"}\n",
+        "print(input)\n",
+        "first_answer = meta.standardised_query(pl, input)[0]['Output']\n",
+        "print(first_answer)\n",
+        "input = 'spill the beans'  #@param {type:\"string\"}\n",
+        "print(input)\n",
+        "first_answer = meta.standardised_query(pl, input)[0]['Output']\n",
+        "print(first_answer)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -430,62 +473,6 @@
         "w_button.on_click(main)\n",
         "# render UI controls in a vertical box\n",
         "widgets.VBox([w_textbox, w_button, w_out])"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Test cases\n",
-        "\n",
-        "### Negation\n",
-        "\n",
-        "*Test 1:*\n",
-        "\n",
-        "```txt\n",
-        "USR: Joseph is not happy\n",
-        "PLX: I will remember that joseph is not happy\n",
-        "USR: Spill the beans\n",
-        "PLX: Every human is mortal. peter is human. joseph is human. joseph is not happy\n",
-        "USR: explain why joseph is not happy\n",
-        "PLX: joseph is not happy; therefore joseph is not happy\n",
-        "```\n",
-        "\n",
-        "*Test 2:*\n",
-        "\n",
-        "```txt\n",
-        "USR: Every teacher is happy\n",
-        "PLX: I will remember every teacher is happy\n",
-        "USR: Joseph is not happy\n",
-        "PLX: I will remember that joseph is not happy\n",
-        "USR: explain why joseph is not a teacher\n",
-        "PLX: joseph is not happy' every teacher is happy; therefore joseph is not a teacher\n",
-        "USR: spill the beans\n",
-        "PLX: every human is mortal. peter is human. joseph is human. every teacher is happy.\n",
-        "```\n",
-        "\n",
-        "### EQ\n",
-        "```txt\n",
-        "% Note: in this case prolexa.pl has: stored_rule(1,[(human(sk):-true),(happy(sk))]):-true)]).\n",
-        "USR: are some humans happy\n",
-        "PLX: some humans are happy\n",
-        "USR: explain why some humans are happy\n",
-        "PLX: some humans are happy; therefore some humans are happy\n",
-        "```\n",
-        "\n",
-        "```txt\n",
-        "USR: are some humans happy\n",
-        "PLX: sorry, I don't think this is the case \n",
-        "USR: some humans are happy\n",
-        "PLX: I will remember that some humans are happy\n",
-        "USR: spill the beans\n",
-        "PLX: every human is mortal. peter is human. joseph is human. some humans are happy. some humans are happy. some humans are happy.\n",
-        "USR: are some humans happy\n",
-        "PLX: some humans are happy\n",
-        "USR: explain why some humans are happy\n",
-        "PLX: some humans are happy; therefore some humans are happy\n",
-        "```\n",
-        "\n"
       ]
     }
   ],
